--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lyceum-iubat-hackathon",
+  "name": "clerk-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.0.4"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.4"
+    "@chakra-ui/react": "^3.1.0",
+    "@clerk/nextjs": "^4.21.8",
+    "@clerk/themes": "^1.7.5",
+    "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "eslint-config-next": "^14.2.15",
+    "framer-motion": "^11.11.4",
+    "groq-sdk": "^0.7.0",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.454.0",
+    "mongoose": "^8.7.1",
+    "nanoid": "^5.0.7",
+    "next": "^14.2.15",
+    "postcss": "8.4.24",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
+    "react-toastify": "^10.0.6",
+    "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "svix": "^1.37.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.2"
   }
 }
