--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "8.4.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-toastify": "^10.0.6",
