--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "^14.2.15",
     "postcss": "8.4.24",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
